--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",  
+    "baseUrl": ".",
     "paths": {
-      "@components/*": ["app/components/*"], 
-      "@styles/*": ["app/styles/*"],          
-      "@data/*": ["app/data/*"],              
-      "@utils/*": ["app/utils/*"],
-      "@animations/*": ["app/animations/*"],             
-      "@api/*": ["app/api/*"]             
+      "@/components/*": ["app/components/*"], 
+      "@/styles/*": ["app/styles/*"],          
+      "@/data/*": ["app/data/*"],              
+      "@/utils/*": ["app/utils/*"],
+      "@/animations/*": ["app/animations/*"],             
+      "@/api/*": ["app/api/*"]             
     }
   }
 }
