--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "autoprefixer": "^10.4.7",
-    "custom-cursor-react": "^1.0.5",
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
-    "next": "^14.2.15",
+    "next": "^14.2.14",
     "next-themes": "^0.2.0",
     "parse-numeric-range": "^1.3.0",
     "postcss": "^8.4.13",
-    "react": "18.1.0",
+    "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.3.4",
