--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -28,9 +27,5 @@
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.24",
     "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
   }
 }
