--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["app/components/*"], 
-      "@/styles/*": ["app/styles/*"],          
-      "@/data/*": ["app/data/*"],              
-      "@/utils/*": ["app/utils/*"],
-      "@/animations/*": ["app/animations/*"],             
-      "@/api/*": ["app/api/*"]             
+      "@/components/*": ["components/*"],
+      "@/styles/*": ["styles/*"],
+      "@/data/*": ["lib/utils/data/*"],
+      "@/utils/*": ["lib/utils/*"],
+      "@/animations/*": ["animations/*"],
+      "@/api/*": ["lib/api/*"]
     }
   }
 }
