--- a/package.json
+++ b/package.json
@@ -9,9 +9,30 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "autoprefixer": "^10.4.7",
+    "caniuse-lite": "^1.0.30001727",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
+    "lucide-react": "^0.525.0",
     "next": "^14.2.14",
     "next-themes": "^0.2.0",
     "parse-numeric-range": "^1.3.0",
@@ -25,7 +46,9 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "styled-components": "^5.3.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.0.24",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^8.3.2"
   }
 }
