--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@headlessui/react": "^1.6.6",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -17,6 +18,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.10.4",
     "lucide-react": "^0.525.0",
+    "negotiator": "^1.0.0",
     "next": "^14.2.14",
     "next-themes": "^0.2.0",
     "parse-numeric-range": "^1.3.0",
