--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portfolio",
   "version": "3.0.0",
   "private": true,
+  "volta": {
+    "node": "20.17.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -36,5 +39,8 @@
     "tailwindcss": "^3.0.24",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "baseline-browser-mapping": "^2.9.12"
   }
 }
